--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
+    "start": "node dist/idex.js",
     "build": "tsc -b"
   },
   "author": "@shyanroychoudhury",
