--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,11 @@
 {
   "name": "server",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "ChatApp server",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.ts",
+    "dev": "tsc && nodemon dist/src/index.js",
     "start": "node dist/src/index.js",
     "build": "tsc -b"
   },
@@ -13,8 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.9.1",
-    "nodemon": "^3.0.1"
+    "@types/node": "^20.9.1"
   },
   "dependencies": {
     "axios": "^1.6.2",
